--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/cli": "7.19.3",
     "@babel/core": "7.20.2",
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.20.1",
     "@babel/types": "^7.20.2",
