--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "changelog": "npx standard-version",
     "test": "npm run test:e2e && npm run test:jest",
     "test:e2e": "node ./test/examples.js",
-    "test:jest": "jest",
+    "test:jest": "jest --no-cache",
     "test:swc": "npm run test:swc:cargo && npm run build:swc && npm run test:swc:jest",
-    "test:swc:jest": "jest --config test/swc/jest.config.js",
+    "test:swc:jest": "jest --config test/swc/jest.config.js --no-cache",
     "test:swc:cargo": "cargo test --manifest-path ./swc/Cargo.toml",
     "docs": "node ./docs/build.js"
   },
@@ -70,5 +70,8 @@
     "jest": "^29.3.1",
     "terser": "5.15.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@node-rs/xxhash": "^1.3.0"
   }
 }
